# Privision-web

./: README.md  manager.py  segmentation_0.yaml  so_c.py  test.py  test.yaml
python_c/: CMakeLists.txt  Makefile  ffmpeg_test.cpp  main.cpp  py_c_11.cpp  rtmpHandler.cpp  rtmpHandler.h  test.cpp
python_c/pyCode/: aaa.py  ffmpeg_demo.py
python_c/release/: CMakeCache.txt  Makefile  cmake_install.cmake  test.py
python_c/release/pybind11/: Makefile  cmake_install.cmake
templates/Web/: package-lock.json  package.json
templates/Web/src/components/ContentMain/: index.js
templates/Web/src/components/SiderNav/: index.js
templates/Web/src/routes/Index/: index.js
templates/Web/src/routes/Login/: LoginForm.js
templates/Web/src/routes/mode_1/: mode_1.js
templates/Web/src/routes/mode_2/: mode_2.js
